--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -1,3 +1,10 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+/* styling for the parsed MDs */
+@layer components {
+  .para {
+    @apply mb-8;
+  }
+}
