Minor theming fixes.

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -7,9 +7,13 @@
   .para {
     @apply mb-8;
   }
-}
 
-/* no need to move by year */
-.react-calendar__navigation__prev2-button, .react-calendar__navigation__next2-button {
-  display: none;
+  .react-calendar__month-view__weekdays__weekday {
+    @apply text-center;
+  }
+
+  /* no need to show the button to navigate by year */
+  .react-calendar__navigation__prev2-button, .react-calendar__navigation__next2-button {
+    @apply hidden;
+  }
 }
